# agent-pipeline

./: .gitignore  DESIGN.md  README.md  pyproject.toml
docs/architecture/: pipeline-graph.md
docs/superpowers/plans/: 2026-07-05-ground-emitted-body.md  2026-07-05-harden-gaps-channel.md  2026-07-05-reflection-loop.md
docs/superpowers/specs/: 2026-07-05-ground-emitted-body-design.md  2026-07-05-harden-gaps-channel-design.md  2026-07-05-reflection-loop-design.md  2026-07-06-grounding-gate-pilot-design.md
src/agent_pipeline/: config.py  model.py
src/agent_pipeline/agents/: analyst.py  composer.py  guardrails.py  plan.py  retriever.py  validator.py
src/agent_pipeline/contracts/: analysis.py  composition.py  retrieval.py  validation.py
src/agent_pipeline/evals/: harness.py  metrics.py  pipeline.py  retrieval.py
src/agent_pipeline/graph/: pipeline.py
src/agent_pipeline/tools/: embeddings.py  knowledge.py  memory.py
tests/: conftest.py  test_a1_e2e.py  test_a2_e2e.py  test_a3_e2e.py  test_a4_e2e.py  test_analysis_contracts.py  test_analysis_guardrails.py  test_analysis_to_composition.py  test_analyst.py  test_composer.py  test_composition_contracts.py  test_composition_guardrails.py  test_contracts.py  test_draft_to_validation.py  test_eval_harness.py  test_eval_metrics.py  test_graph.py  test_guardrails.py  test_knowledge.py  test_memory.py  test_model.py  test_pipeline_eval.py  test_reflection.py  test_retrieval_eval.py  test_retriever.py  test_translators.py  test_validation_contracts.py  test_validation_guardrails.py  test_validator.py
(+3 files in other folders)
