[project]
name = "agent-pipeline"
version = "0.0.1"
description = "Four-agent Pipeline (Agent-Driven Design): Retrieve -> Analyze -> Compose -> Validate"
requires-python = ">=3.12"
dependencies = [
    "langchain-core",
    "langchain",
    "langgraph",
    "fastembed",
    "pydantic>=2",
]

[project.optional-dependencies]
# Installed only where a real LLM provider key is available (e.g. ANTHROPIC_API_KEY).
anthropic = ["langchain-anthropic"]
# Cloud tracing; no-op unless LANGSMITH_API_KEY is set.
tracing = ["langsmith"]

[dependency-groups]
# langchain-anthropic is a runtime optional-dependency, but the model tests
# exercise the real anthropic build_model() path, so the test env always needs it.
dev = ["pytest>=8", "langchain-anthropic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
